--- a/include/views/default/cockpit2/frontend/drivers/drivers-onboarding-form.phtml
+++ b/include/views/default/cockpit2/frontend/drivers/drivers-onboarding-form.phtml
@@ -159,6 +159,16 @@
 				<div class="input">
 				<textarea name="driverAddress" ng-model="driver.address"></textarea>
 			</li>
+                
+           <li class="li-input">
+				<div class="label">T-shirt Size:</div>
+				<div class="input">
+					<select name="drivertshirtSizes"  ng-model="driver.tshirt_size" ng-options="opt as opt for opt in tshirt_sizes" ></select>
+				</div>
+				<div class="box-error">
+					<small ng-show="form.driveriPhoneType.$error.required">Required.</small>
+				</div>
+			</li>
 
 			<li class="li-input">
 				<div class="label">How soon the driver needs a pexcard:</div>
@@ -194,6 +204,8 @@
 					<small ng-show="form.driverPermashifts.$error.required">Required.</small>
 				</div>
 			</li>
+            
+            
 
 			<li class="li-input">
 				<div class="label">Desired Weekly Hours:</div>
