--- a/include/views/mail/crunchbutton/driver/notification/setup.phtml
+++ b/include/views/mail/crunchbutton/driver/notification/setup.phtml
@@ -20,7 +20,7 @@
 	If you have any questions, just text us directly at 646-783-1444.
 </p>
 <p>
-	Once you've tested it, let me know, to confirm that it worked.
+	Once you've tested it, let us know, to confirm that it worked.
 </p>
 <p>
 	Thanks,<br />
