--- a/include/views/default/cockpit2/layout/html.body.phtml
+++ b/include/views/default/cockpit2/layout/html.body.phtml
@@ -64,6 +64,7 @@
 					</table>
 				</a>
 
+
 				<a class="menu-link" ng-click="account.logout()" ng-if="account.user.id_admin">
 					<table cellpadding="0" cellspacing="0" class="side-menu-wrap">
 						<tr>
@@ -138,6 +139,15 @@
 						<tr>
 							<td class="side-menu-icon"><i class="fa fa-support"></i></td>
 							<td class="side-menu-label">FAQ</a></td>
+						</tr>
+					</table>
+				</a>
+
+				<a href="/drivers/feedback" class="menu-link" ng-if="account.isDriver && menu.toggle=='driver'" ng-class="{'nav-active': (navigation.page == 'drivers-feedback')}">
+					<table cellpadding="0" cellspacing="0" class="side-menu-wrap">
+						<tr>
+							<td class="side-menu-icon"><i class="fa fa-quote-left"></i></td>
+							<td class="side-menu-label">Feedback</a></td>
 						</tr>
 					</table>
 				</a>
