--- a/include/views/default/cockpit2/frontend/drivers/drivers-feedback.phtml
+++ b/include/views/default/cockpit2/frontend/drivers/drivers-feedback.phtml
@@ -9,7 +9,7 @@
     <div class="driver-feedback">
  <div class="form-group">
             <label class="driverlabel">
-                <span>*</span>How can we make driving for Crunchbutton a more awesome experience?
+                <span>*</span>How can we make Crunchbutton a more awesome experience? Tell us anything you can!
             </label>
             <br>
             
