--- a/include/views/default/cockpit2/layout/html.body.phtml
+++ b/include/views/default/cockpit2/layout/html.body.phtml
@@ -64,6 +64,14 @@
 					</table>
 				</a>
 
+                <a href="/drivers/feedback" class="menu-link" ng-class="{'nav-active': (navigation.page == 'drivers-feedback')}">
+					<table cellpadding="0" cellspacing="0" class="side-menu-wrap">
+						<tr>
+							<td class="side-menu-icon"><i class="fa fa-quote-left"></i></td>
+							<td class="side-menu-label">Feedback</a></td>
+						</tr>
+					</table>
+				</a>
 
 				<a class="menu-link" ng-click="account.logout()" ng-if="account.user.id_admin">
 					<table cellpadding="0" cellspacing="0" class="side-menu-wrap">
@@ -143,7 +151,7 @@
 					</table>
 				</a>
 
-				<a href="/drivers/feedback" class="menu-link" ng-if="account.isDriver && menu.toggle=='driver'" ng-class="{'nav-active': (navigation.page == 'drivers-feedback')}">
+				<a href="/drivers/feedback" class="menu-link" ng-class="{'nav-active': (navigation.page == 'drivers-feedback')}">
 					<table cellpadding="0" cellspacing="0" class="side-menu-wrap">
 						<tr>
 							<td class="side-menu-icon"><i class="fa fa-quote-left"></i></td>
@@ -269,6 +277,15 @@
 						<tr>
 							<td class="side-menu-icon"><i class="fa fa-cogs"></i></td>
 							<td class="side-menu-label">Tools &amp; Config</a></td>
+						</tr>
+					</table>
+				</a>
+                
+                <a href="/drivers/feedback" class="menu-link" ng-class="{'nav-active': (navigation.page == 'drivers-feedback')}">
+					<table cellpadding="0" cellspacing="0" class="side-menu-wrap">
+						<tr>
+							<td class="side-menu-icon"><i class="fa fa-quote-left"></i></td>
+							<td class="side-menu-label">Feedback</a></td>
 						</tr>
 					</table>
 				</a>
