--- a/include/views/default/crunchbutton/frontend/reps.apply.phtml
+++ b/include/views/default/crunchbutton/frontend/reps.apply.phtml
@@ -1,7 +1,7 @@
 <div class="top-pad"></div>
 <div class="content-padding drivers-apply">
 	<div class="apply-item-title text-your-order" name="userForm">
-		Driver Application
+		Marketing Rep Application
 	</div>
 	<p>
 		<br>
@@ -47,7 +47,7 @@
 				<select class="form-control form-control-large form-control form-control-select" ng-model="apply.university" name="university" >
 					<option></option> 
 					<option ng-repeat="community in communities | orderBy: 'name'" value="{{community.name}}">{{community.name}}</option>
-					<option valie="Other">Other</option> 
+					<option value="Other">Other</option>
 				</select>
 			</div>
 		</div>
