Add this option to cockpit.crunchbutton.com restaurant page #4718

--- a/include/views/default/cockpit/restaurants/restaurant.phtml
+++ b/include/views/default/cockpit/restaurants/restaurant.phtml
@@ -349,6 +349,18 @@
 					<div class="admin-item">
 						<div class="admin-item-left">
 							<div class="admin-item-name">
+								Display on Choose Restaurant Page When Closed?
+							</div>
+						</div>
+
+						<div class="admin-item-right">
+							<div class="admin-item-col-small" id="restaurant-show-when-closed-container"></div>
+						</div>
+					</div>
+
+					<div class="admin-item">
+						<div class="admin-item-left">
+							<div class="admin-item-name">
 								Image
 							</div>
 						</div>
