display closed restaurants instead of hiding them #4617

--- a/include/views/default/seven/frontend/restaurants.phtml
+++ b/include/views/default/seven/frontend/restaurants.phtml
@@ -63,8 +63,8 @@
 </div>
 
 <div ng-if="restaurants">
-	
-	
+
+
 
 	<div class="restaurants-items">
 
@@ -95,7 +95,9 @@
 							<div ng-switch on="restaurant._tag">
 								<div class="meal-item-tag" ng-switch-when="takeout">Take out only</div>
 								<div class="meal-item-tag about-to-close" ng-switch-when="closing">Hurry, closes in {{restaurant._closesIn}} min!</div>
-								<div class="meal-item-tag about-to-open" ng-switch-when="opening">Available {{restaurant._opensIn_formatted}} </div>
+								<div ng-switch-when="opening">
+									<div ng-if="restaurant._opensIn_formatted" class="meal-item-tag about-to-open"><span >Available {{restaurant._opensIn_formatted}}</span></div>
+								</div>
 							</div>
 
 							<div class="meal-item-tag-bottom" ng-if="restaurant._tag == 'closing' || restaurant._tag == 'takeout' || restaurant._tag == 'force_close'"></div>
