--- a/include/views/default/cockpit/support/content.phtml
+++ b/include/views/default/cockpit/support/content.phtml
@@ -2,7 +2,7 @@
 	<div class="box-header">
 		<span class="title">Recent Issues</span>
 		<ul class="box-toolbar">
-			<li><span class="label label-green"><?php echo $this->waiting; ?> tickets waiting for an anwser</span></li>
+			<li><span class="label label-green"><?php echo $this->waiting; ?> tickets waiting for an answer</span></li>
 			<li><span class="label label-blue"><?php echo $this->totalOpened; ?> open</span></li>
 		</ul>
 	</div>
