--- a/include/views/default/cockpit/support/make-call.phtml
+++ b/include/views/default/cockpit/support/make-call.phtml
@@ -46,21 +46,21 @@
 						</div>
 					</div>
 
-					<div class="row-fluid">
-						<div class="span12">
-							<div class="span4">
-								<strong>Are you calling to</strong>
-							</div>
-							<div class="span7">
-								<select id="form-make-call-to" name="form-make-call-to" class="chosen-select">
-									<option value="customer">customer</option>
-									<option <?php if( $this->id_admin ){ echo 'selected="selected"'; } ?> value="driver">driver</option>
-									<option value="restaurant">restaurant</option>
-								</select>
-								<br/><br/>
-							</div>
-						</div>
-					</div>
+<!--					<div class="row-fluid">-->
+<!--						<div class="span12">-->
+<!--							<div class="span4">-->
+<!--								<strong>Are you calling to</strong>-->
+<!--							</div>-->
+<!--							<div class="span7">-->
+<!--								<select id="form-make-call-to" name="form-make-call-to" class="chosen-select">-->
+<!--									<option value="customer">customer</option>-->
+<!--									<option --><?php //if( $this->id_admin ){ echo 'selected="selected"'; } ?><!-- value="driver">driver</option>-->
+<!--									<option value="restaurant">restaurant</option>-->
+<!--								</select>-->
+<!--								<br/><br/>-->
+<!--							</div>-->
+<!--						</div>-->
+<!--					</div>-->
 					<div class="row-fluid">
 						<div class="span12">
 							<div class="span4"></div>
