--- a/include/views/default/cockpit/support/index.phtml
+++ b/include/views/default/cockpit/support/index.phtml
@@ -42,7 +42,7 @@
 
 <div id="container-chats"></div>
 
-<div class="modal hide fade" id="modal-sms" style="display: none;">
+<div class="modal hide fade" id="modal-sms" style="display: none; left: 50%;">
 	<div class="modal-header">
 		<button class="close" data-dismiss="modal" type="button">×</button>
 		<h6 id="modal-sms-title"></h6>
