--- a/include/views/default/crunchbutton/frontend/restaurants.phtml
+++ b/include/views/default/crunchbutton/frontend/restaurants.phtml
@@ -53,7 +53,7 @@
 				<div class="meal-item-spacer"></div>
 			</div>
 			<button class="show-more-restaurants" ng-show="restaurantsToShow < restaurants.length" ng-click="showMoreRestaurants()">
-				Show more
+				Show more Restaurants
 			</button>
 		</div>
 	</div>
