--- a/include/views/default/crunchbutton/frontend/restaurant.closed.phtml
+++ b/include/views/default/crunchbutton/frontend/restaurant.closed.phtml
@@ -3,7 +3,7 @@
 		<h1 ng-bind="restaurant.name"></h1>
 		<p>
 			<span ng-if="!acceptingOrders">
-				<span ng-if="restaurant.delivery">is temporarily unavailable for delivery, but is usualy available durring the following hours</span>
+				<span ng-if="restaurant.delivery">is temporarily unavailable for delivery, but is usually available during the following hours</span>
 				<span ng-if="!restaurant.delivery">is temporarily closed but is usualy available during the following hours</span>
 			</span>
 			<span ng-if="acceptingOrders">
