--- a/include/views/default/crunchbutton/frontend/restaurant.phtml
+++ b/include/views/default/crunchbutton/frontend/restaurant.phtml
@@ -3,6 +3,11 @@
  THIS WILL SHOW UP WHEN A RESTAURANT PAGE IS DIRECTLY LOADED FROM A BROWSER BEFORE THE PAGE SHOWS.
 </div>
 */ ?>
+<style>
+	.toggle-active {
+		margin-top:0;
+	}
+</style>
 
 <div ng-show="restaurant">
 	<div class="giftcard-badge-container" ng-show="credit.hasValue">
