--- a/include/views/default/cockpit/drivers/deliveries/index.phtml
+++ b/include/views/default/cockpit/drivers/deliveries/index.phtml
@@ -101,7 +101,7 @@
 		</div>
 	</div>
 </div>
-<div class="modal hide fade" id="modal-hours" style="display: none;">
+<div class="modal hide fade" id="modal-hours" style="display: none; left: 50%">
 	<div class="modal-header">
 		<button class="close" data-dismiss="modal" type="button">×</button>
 		<h6 id="modal-hours-title">Assign driver</h6>
