Start actually showing charts!

--- a/include/views/default/cockpit2/frontend/metrics/metrics.phtml
+++ b/include/views/default/cockpit2/frontend/metrics/metrics.phtml
@@ -10,6 +10,9 @@
 			<select ng-options='period.symbol as period.description for period in availablePeriods' ng-model='settings.period' ng-change='refreshData()'></select>
 			<button name='refresh' ng-click='refreshData()'>Refresh</button>
 			<button name='addChart' ng-click='addChart()'>Add Chart</button>
+			<button ng-click='showCharts = showCharts + 1'>Show/Hide Charts</button>
+			<input type='number' ng-model='settings.chartWidth'>
+			<input type='number' ng-model='settings.chartHeight'>
 			<div ng-repeat='chartOption in settings.charts'>
 				<select ng-options='chart.type as chart.description for chart in availableCharts' ng-model='chartOption.type' ng-change='updateChartOption(chartOption)'></select>
 				<select ng-options='item.kind as item.description for item in sortMethods' ng-model='chartOption.orderMethod' ng-change='updateChartOrders(chartOption)'></select>
@@ -23,12 +26,19 @@
 		<input type='checkbox' checkbox-group>
 		<label>{{community.name}}</label>
 	</div> -->
-	<div ng-repeat='community in orderedCommunities'>
+	<div ng-repeat='community in selectedCommunities'>
 		{{community.name}}
 		<div ng-repeat='chart in settings.charts'>
-			chart type: {{chart.type}} ({{chart.format}})
+			<div ng-if='showCharts % 2 == 1' style="width:{{settings.chartWidth}};height:{{settings.chartHeight}}">
+				<canvas class="chart chart-line" data="chartData[community.id_community][chart.type].data"
+					options="chartData[community.id_community][chart.type].options"
+					labels="chartData[community.id_community][chart.type].labels"
+					legend="false"></canvas>
+			</div>
+			<div ng-show='showCharts % 2 == 0'>chart type: {{chart.type}} ({{chart.format}})
 			data:{{chartData[community.id_community][chart.type].data}} options:{{chartData[community.id_communiy][chart.type].options}}
 			{{chartData[community.id_community][chart.type]}}
+</div>
 		</div>
 	</div>
 </div>
