"Free food" in sideswipe menu and link next to "Help" on desktop #4367

--- a/include/views/default/crunchbutton/frontend/free-food.phtml
+++ b/include/views/default/crunchbutton/frontend/free-food.phtml
@@ -5,7 +5,7 @@
 		Invite your friends and earn a free delivery in Crunch Credit for every new friend who orders!
 	</p>
 	<br /><br />
-	<div ng-if="!account.user.points.free_delivery_message && account.user.points.away_free_delivery">
+		<div>
 			<div>Earn points by ordering food, sharing your order, or referring friends.</div>
 			<div>Share this family and friends code and both of you get your next delivery on us.</div>
 			<div><strong>{{account.user.invite_code}}</strong></div>
