Allow updateChartOrder to automatically recalculate chart ordering and start allowing selection of subset of communities

--- a/include/views/default/cockpit2/frontend/metrics/metrics.phtml
+++ b/include/views/default/cockpit2/frontend/metrics/metrics.phtml
@@ -15,8 +15,8 @@
 			<input type='number' ng-model='settings.chartHeight'>
 			<div ng-repeat='chartOption in settings.charts'>
 				<select ng-options='chart.type as chart.description for chart in availableCharts' ng-model='chartOption.type' ng-change='updateChartOption(chartOption)'></select>
-				<select ng-options='item.kind as item.description for item in sortMethods' ng-model='chartOption.orderMethod' ng-change='updateChartOrders(chartOption)'></select>
-				<select ng-options='item.kind as item.description for item in sortDirections' ng-model='chartOption.orderDirection' ng-change='updateChartOrders(chartOption)'></select>
+				<select ng-options='item.kind as item.description for item in sortMethods' ng-model='chartOption.orderMethod' ng-change='updateChartOrders(chartOption, true)'></select>
+				<select ng-options='item.kind as item.description for item in sortDirections' ng-model='chartOption.orderDirection' ng-change='updateChartOrders(chartOption, true)'></select>
 				<select ng-options='item.kind as item.description for item in setScales' ng-model='chartOption.uniformScale' ng-change='updateChartOption(chartOption)'></select>
 				<button name='removeChart' ng-click='removeChartOption(chartOption)'>X</button>
 			</div>
