--- a/include/views/default/seven/frontend/about.phtml
+++ b/include/views/default/seven/frontend/about.phtml
@@ -32,9 +32,9 @@
 	<div class="divider"></div>
 </div>
 
-<div class="content-padding">
-	<br />
-	<div class="staff">
+<br /><br /><br />
+<div class="content-padding col-box">
+	<div class="staff two-col">
 		<div class="staff-judd staff-image animated-resize"></div>
 		<h1>Judd Rosenblatt</h1>
 		<h2>Chief Eater</h2>
@@ -47,7 +47,7 @@
 		</p>
 	</div>
 
-	<div class="staff">
+	<div class="staff two-col">
 		<div class="staff-devin staff-image animated-resize"></div>
 		<h1>Devin Smith</h1>
 		<h2>Executive Chef</h2>
@@ -60,7 +60,7 @@
 		</p>
 	</div>
 	
-	<div class="staff">
+	<div class="staff two-col">
 		<div class="staff-david staff-image animated-resize"></div>
 		<h1>David Klumpp</h1>
 		<h2>Chief Taster</h2>
@@ -73,7 +73,7 @@
 		</p>
 	</div>
 	
-	<div class="staff">
+	<div class="staff two-col">
 		<div class="staff-nick staff-image animated-resize"></div>
 		<h1>Nick Hunter</h1>
 		<h2>Chief Curator</h2>
@@ -86,7 +86,7 @@
 		</p>
 	</div>
 	
-	<div class="staff">
+	<div class="staff two-col">
 		<div class="staff-daniel staff-image animated-resize"></div>
 		<h1>Daniel Camargo</h1>
 		<h2>Sous-chef</h2>
@@ -98,7 +98,9 @@
 			Part Brazilian, part super hero. When the day needs saving he saves it.
 		</p>
 	</div>
+</div>
 
+<div class="content-padding about-join-team-wrap">
 	<div class="about-join-bubble-wrap">
 		<div class="bubble-curved bubble-curved-green bubble-animated animated-resize">
 			<div class="text" ng-switch="orangeMessage">
