--- a/www/assets/scss/seven.scss
+++ b/www/assets/scss/seven.scss
@@ -3798,6 +3798,12 @@ i {
 	.col-box .two-col {
 		width: 46%;
 	}
+	.staff {
+		margin-bottom: 5em;
+	}
+	.about-join-team-wrap {
+		width: 40%;
+	}
 }
 
 .page-help .col-box .two-col {
