--- a/include/views/default/cockpit2/frontend/metrics/metrics.phtml
+++ b/include/views/default/cockpit2/frontend/metrics/metrics.phtml
@@ -7,10 +7,10 @@
 			<!-- changes here are handled by explicit watch in controller so we can set a timeout -->
 			<input type='text' ng-model='settings.start'>
 			<input type='text' ng-model='settings.end'>
-			<button ng-click='unselectAllCommunities()'>Unselect All Communities</button>
-			<div ng-repeat='community in allowedCommunities'>
-				{{community.name}}<input type='checkbox' ng-model='community.selected' ng-change='orderSelectedCommunities()'><br>
-			</div>
+			<div multi-select input-model="multiSelectCommunities" button-label="name" item-label="name" tick-property="selected"
+				on-item-click='orderSelectedCommunities()'
+				on-cose='orderSelectedCommunities()'
+				max-labels="3"></div>
 			<select ng-options='period.symbol as period.description for period in availablePeriods' ng-model='settings.period' ng-change='refreshData()'></select>
 			<button name='refresh' ng-click='refreshData()'>Refresh</button>
 			<button name='addChart' ng-click='addChart()'>Add Chart</button>
